chore: small changes to Deck